<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutFragment_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.AboutFragment"
    tools:openDrawer="left">


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/toolbar_header"
                layout="@layout/toolbar_header" />

            <TextView
                android:id="@+id/title_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_header"
                android:layout_marginStart="120dp"
                android:layout_marginTop="@dimen/layout_margin_20"
                android:gravity="center"
                android:text="@string/about_us"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle1_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/our_founders_about"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content1_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle1_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content1_about"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitle2_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content1_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/why_is_good_wasted"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content2_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle2_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content2_about"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitle3_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content2_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/how_does_it_affect_us"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content3_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle3_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content3_about"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitle4_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content3_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/impact_on_the_environment"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content4_about_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle4_about_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content4_about"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <include layout="@layout/toolbar_footer" />


        </RelativeLayout>

    </ScrollView>
    <include
        android:id="@+id/appBar_navigation"
        layout="@layout/appbar_home_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/header_navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/grey"
        app:headerLayout="@layout/header_file"
        app:menu="@menu/bottom_nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>