<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.HomeFragment"
    tools:openDrawer="left">


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/toolbar_header"
                layout="@layout/toolbar_header" />

            <TextView
                android:id="@+id/title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_header"
                android:layout_marginStart="60dp"
                android:layout_marginTop="@dimen/layout_margin_20"
                android:gravity="center"
                android:text="@string/reduce_food_waste"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_textView"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/subtitle1_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_recyclerView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/our_founders"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content1_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle1_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitle2_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content1_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/why_is_good_wasted"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content2_textView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle2_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/content2_imageView"
                android:layout_width="200dp"
                android:layout_height="190dp"
                android:layout_below="@id/subtitle2_textView"
                android:layout_toLeftOf="@+id/content2_textView"
                android:layout_toEndOf="@id/content2_textView"
                android:src="@drawable/photo1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/content2_1_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content2_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content2.1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitle3_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content2_1_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/the_food_waste_crisis"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content3_textView"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle3_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/content3_imageView"
                android:layout_width="220dp"
                android:layout_height="200dp"
                android:layout_below="@id/subtitle3_textView"
                android:layout_toRightOf="@+id/content3_textView"
                android:src="@drawable/photo2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/content3_1_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content3_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content3.1"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/subtitle4_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content3_1_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/why_is_good_food_wasted"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content4_textView"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle4_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/content4_imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@id/subtitle4_textView"
                android:layout_toRightOf="@+id/content4_textView"
                android:src="@drawable/photo3"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/subtitle5_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content4_imageView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginTop="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/our_parteners"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content5_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle5_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/content6_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content5_textView"
                android:layout_marginStart="@dimen/layout_margin_15"
                android:layout_marginEnd="@dimen/layout_margin_15"
                android:text="@string/content6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerView_partners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content6_textView"
                android:layout_above="@+id/toolbar_footer"
                android:layout_marginBottom="@dimen/layout_margin_80"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <include layout="@layout/toolbar_footer" />


        </RelativeLayout>

    </ScrollView>

    <include
        android:id="@+id/appBar_navigation"
        layout="@layout/appbar_home_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/header_navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/grey"
        app:headerLayout="@layout/header_file"
        app:menu="@menu/bottom_nav_menu" />


</androidx.drawerlayout.widget.DrawerLayout>